# gstreamer-test-plugin

./: meson_options.txt
gst/: meson.build
gst/mythreshold/: gstmythreshold.c  gstmythreshold.h  meson.build  plugin.c
gst/spectrum/: gstspectrum.c  meson.build
